Revise README with Java version and profiling details
Updated README to reflect changes in Java version and added profiling information.